config/networkpolicy/ceph-csi/rbd-nodeplugin-csi-addons-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ceph-csi-rbd-nodeplugin-csi-addons
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app: openshift-storage.rbd.csi.ceph.com-nodeplugin-csi-addons
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchLabels:
          app: csi-addons-controller-manager
    ports:
    - protocol: TCP
      port: 9071
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 172.30.0.1/32
    ports:
    - protocol: TCP
      port: 443
  - to:
    - ipBlock:
        cidr: 10.241.0.0/16
    ports:
    - protocol: TCP
      port: 6443
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchLabels:
          app: rook-ceph-mon
    ports:
    - protocol: TCP
      port: 3300
    - protocol: TCP
      port: 6789
