config/networkpolicy/ceph-csi/rbd-nodeplugin-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ceph-csi-rbd-nodeplugin
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app: openshift-storage.rbd.csi.ceph.com-nodeplugin
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8680
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 172.30.0.1/32
    ports:
    - protocol: TCP
      port: 443
  - to:
    - ipBlock:
        cidr: 10.241.0.0/16
    ports:
    - protocol: TCP
      port: 6443
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchLabels:
          app: rook-ceph-mon
    ports:
    - protocol: TCP
      port: 3300
    - protocol: TCP
      port: 6789
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchLabels:
          app: rook-ceph-osd
    ports:
    - protocol: TCP
      port: 6800
      endPort: 7300
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchLabels:
          app: rook-ceph-mgr
    ports:
    - protocol: TCP
      port: 9283
    - protocol: TCP
      port: 6800
      endPort: 7300
